# assignment1

./: CMakeLists.txt  Layout.cpp  Layout.h  ReadMe.md  main.cpp  vertices.cpp  vertices.h
agent/: Agent.cpp  Agent.h
coin/: Coin.cpp  Coin.h
game/: Game.cpp  Game.h  GameObject.cpp  GameObject.h
shaders/: ShaderLoader.cpp  ShaderLoader.h  agent_shader.fs  coin_shader.fs  fragment_shader.fs  vehicle_shader.fs
vehicle/: Car.cpp  Car.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h
